--- a/notebooks/01_local_processing.ipynb
+++ b/notebooks/01_local_processing.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import rasterio\n",
-    "#import gdal\n",
+    "from osgeo import gdal\n",
     "import cv2 # This is OpenCV\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
